Picture Viewer Navigation Complete
Can navigate forward through selected images using the Xbox controller
and transform the images
Doesn't store image calibration (position and scaling) information
though

--- a/BinocularPhotoViewer/BinocularPhotoViewer.csproj
+++ b/BinocularPhotoViewer/BinocularPhotoViewer.csproj
@@ -125,10 +125,12 @@
     <Resource Include="j_s1_0.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="EndofTask1.png" />
     <Resource Include="EndofTraining.png" />
     <Resource Include="FirstImage.png" />
     <Resource Include="StartofTraining.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="LastImage.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SharpDX.2.6.2\build\SharpDX.targets" Condition="Exists('..\packages\SharpDX.2.6.2\build\SharpDX.targets')" />
