--- a/BinocularPhotoViewer/BinocularPhotoViewer.csproj
+++ b/BinocularPhotoViewer/BinocularPhotoViewer.csproj
@@ -137,6 +137,9 @@
     <Resource Include="EndofTask2.png" />
     <Resource Include="Task2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Task3.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SharpDX.2.6.2\build\SharpDX.targets" Condition="Exists('..\packages\SharpDX.2.6.2\build\SharpDX.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
